@@ -15,6 +15,9 @@ appveyor = { repository = "Susurrus/serialport-rs", service = "gitlab" }
 gitlab = { repository = "susurrus/serialport-rs" }
 travis-ci = { repository = "Susurrus/serialport-rs" }
 
+[features]
+default = ["libudev"]
+
 [dev-dependencies]
 argparse = "0.2"
 
@@ -23,7 +26,7 @@ nix = "0.11"
 bitflags = "1.0"
 
 [target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
-libudev = "0.2.0"
+libudev = { version = "0.2.0", optional = true }
 
 [target."cfg(windows)".dependencies]
 regex = "1.0"
