@@ -1,10 +1,10 @@
-#[cfg(all(target_os = "linux", not(target_env = "musl")))]
+#[cfg(all(target_os = "linux", not(target_env = "musl"), feature = "libudev"))]
 use libudev;
 use nix;
 
 use std::io;
 
-#[cfg(all(target_os = "linux", not(target_env = "musl")))]
+#[cfg(all(target_os = "linux", not(target_env = "musl"), feature = "libudev"))]
 impl From<libudev::Error> for ::Error {
     fn from(e: libudev::Error) -> ::Error {
         let description = e.description().to_string();
